# FastAPI_Auth

./: .env  main.py  pyproject.toml
app/core/security/: authHandler.py  hashHelper.py
app/db/repository/: base.py  user.py
app/db/schemas/: user.py
app/router/: auth.py
app/service/: userService.py
app/utils/: protectedRoute.py
